chore/ui/docs: update TODO spec and options scaffolding\n\n- Update BizTone_TODO_NEXT_FEATURES.md\n- Prep options UI files for upcoming domain/whitelist/blacklist features\n- Minor style/contentScript tweaks for future transparency toasts

--- a/options.html
+++ b/options.html
@@ -53,9 +53,6 @@
           <button type="button" class="btn-secondary" id="openGuide">
             📖 키 발급 가이드
           </button>
-          <button type="button" class="btn-tertiary" id="validateFromBanner">
-            ✅ 바로 검증하기
-          </button>
         </div>
       </div>
     </div>
@@ -99,6 +96,10 @@
         • <strong>자동변환:</strong> 감지 즉시 변환하여 교체 (기존 방식)<br>
         • <strong>경고:</strong> 알림만 표시하고 다시 Enter 시 원문 그대로 전송
       </div>
+    </div>
+    
+    <div style="margin-top: 15px; text-align: right;">
+      <button id="saveGuardMode">저장</button>
     </div>
   </div>
 
